# player

./: CMakeLists.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  vcpkg.json
src/components/: Button.cpp  Button.h
src/db/: Movie.cpp  Movie.h  SqlVideo.cpp  SqlVideo.h
src/download/: HandleMagnet.cpp  HandleMagnet.h
src/home/: home.cpp  home.h
src/media/: VideoPage.cpp  VideoPage.h
src/network/: HttpClient.cpp  HttpClient.h
src/videodecoder/: AudioDecoderThread.cpp  AudioDecoderThread.h  AudioPlayThread.cpp  AudioPlayThread.h  DecodeAudio.cpp  DecodeAudio.h  DecodeFrame.cpp  DecodeFrame.h  DecodeState.cpp  DecodeState.h  DecodeVideo.cpp  DecodeVideo.h  ReadFrameThread.cpp  ReadFrameThread.h  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderThread.cpp  VideoDecoderThread.h  VideoPlayThread.cpp  VideoPlayThread.h
src/videoplayer/: videoplayer.cpp  videoplayer.h
src/videowidget/: videowidget.cpp  videowidget.h
